--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,16 +5,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
           node-version: '16.3.0'
-      - run: npm install
+        run: npm install
       - name: Test
-      - env:
+        env:
           BROWSERSTAK_USERNAME: ${{ secrets.BROWSERSTAK_USERNAME }}
           BORWSERSTACK_KEY: ${{ secrets.BORWSERSTACK_KEY }} 
-      - run: npx wdio config/wdio.android.bs.conf.js --spec test/specs/android/delete-android-colorNote-screen.spec.js
+        run: npx wdio config/wdio.android.bs.conf.js --spec test/specs/android/delete-android-colorNote-screen.spec.js
       - uses: actions/upload-artifac@v1
         if: failure()
         with:
