--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,14 +1,15 @@
 name: learn-github-actions
 on: [push, pull_request]
 jobs:
-  check-bats-version:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '16.3.0'
+          node-version: 16.3.0
+      - name: Install
         run: npm install
       - name: Test
         env:
