--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
           BROWSERSTAK_USERNAME: ${{ secrets.BROWSERSTAK_USERNAME }}
           BORWSERSTACK_KEY: ${{ secrets.BORWSERSTACK_KEY }} 
         run: npx wdio config/wdio.android.bs.conf.js --spec test/specs/android/delete-android-colorNote-screen.spec.js
-      - uses: actions/upload-artifac@v1
+      - uses: actions/upload-artifact@v2
         if: failure()
         with:
           name: logs
