--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,7 +15,7 @@ jobs:
           env: 
             BROWSERSTAK_USERNAME: ${{ secrets.BROWSERSTAK_USERNAME }}
             BORWSERSTACK_KEY: ${{ secrets.BORWSERSTACK_KEY }}
-          run: npx wdio config/wdio.android.bs.conf.js --spec test/specs/android/delete-android-colorNote-screen.spec.js
+          run: npx wdio config/wdio.android.bs.conf.js
         - uses: actions/upload-artifact@v1
           if: failure()
           with:
